[tool.poetry]
name = "sci"
version = "0.1.0"
description = ""
authors = ["Zain Azam <zainyusufazam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
